<resources>
    <string name="app_name">HackProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_permission">Permissions</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_account">Invalid account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_login">Sign in</string>
    <string name="pref_login_email">login_id</string>
    <string name="pref_login_password">password</string>
    <string name="pref_login">login</string>
    <string name="error_not_edu_email">Not a valid school email</string>
    <string name="need_account">Need an Account?</string>
    <string name="action_profile">profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_gender">Gender</string>
    <string name="pref_first_name">firstName</string>
    <string name="pref_last_name">lastName</string>
    <string name="pref_age">age</string>
    <string name="pref_gender">gender</string>

    <string name="send">Send</string>
    <string name="title_activity_list_profile">ListProfileActivity</string>
    <string name="action_register_short">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="action_gravitar">Add Gravitar Image</string>
</resources>
